[tool.poetry]
name = "river-name-sound-basic"
version = "0.1.0"
description = ""
authors = ["cuvner <chriscourage699@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.45.0"
pyaudio = "^0.2.14"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


